major changes are (1) reorganized to keep relevant files and move rest to archive, (2) paths in create_dataset* files are now relative

--- a/Code/archive/create_dsMPS_full_dataset.ipynb
+++ b/Code/archive/create_dsMPS_full_dataset.ipynb
@@ -43,7 +43,7 @@
     }
    ],
    "source": [
-    "root_matdata_dir = 'D:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/'\n",
+    "root_matdata_dir = '../Datasets/mps_gp_sgram/'\n",
     "out_ml_dir = root_matdata_dir + 'ml_data_CNN/'\n",
     "if not os.path.exists(out_ml_dir):\n",
     "    os.makedirs(out_ml_dir)\n",
