--- a/Code/create_CarMod_snr_dataset.ipynb
+++ b/Code/create_CarMod_snr_dataset.ipynb
@@ -2707,8 +2707,8 @@
    "source": [
     "\n",
     "def save_snr_data(snr_value):\n",
-    "    root_in_dir= 'D:/Dropbox/Python/MLmodels/Datasets/CarModPow/'\n",
-    "    root_out_dir= 'D:/Dropbox/Python/MLmodels/Datasets/CarModPow/PyData/'\n",
+    "    root_in_dir= '../Datasets/CarModPow/'\n",
+    "    root_out_dir= '../Datasets/CarModPow/PyData/'\n",
     "    if not os.path.exists(root_out_dir):\n",
     "        os.makedirs(root_out_dir)\n",
     "    \n",
@@ -2816,10 +2816,10 @@
     "    else: \n",
     "        print(\"File (\" + out_CarMod_data_file + \") already exists\")\n",
     "\n",
-    "all_snrs= np.arange(-20.0, 11, 5)\n",
-    "all_snrs= np.append(all_snrs, np.inf)\n",
-    "for snr_val in all_snrs:\n",
-    "    save_snr_data(snr_val)\n"
+    "# all_snrs= np.arange(-20.0, 11, 5)\n",
+    "# all_snrs= np.append(all_snrs, np.inf)\n",
+    "# for snr_val in all_snrs:\n",
+    "#     save_snr_data(snr_val)\n"
    ]
   },
   {
@@ -2835,10 +2835,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# all_snrs= np.arange(-20.0, 11, 5)\n",
-    "# all_snrs= np.append(all_snrs, np.inf)\n",
-    "# for snr_val in all_snrs[1:]:\n",
-    "#     save_snr_data(snr_val)"
+    "all_snrs= np.arange(-20.0, 11, 5)\n",
+    "all_snrs= np.append(all_snrs, np.inf)\n",
+    "for snr_val in all_snrs[1:]:\n",
+    "    save_snr_data(snr_val)"
    ]
   }
  ],
