--- a/Code/create_psd_full_dataset.ipynb
+++ b/Code/create_psd_full_dataset.ipynb
@@ -74,8 +74,8 @@
    "source": [
     "\n",
     "def save_snr_data(snr_value):\n",
-    "    root_in_dir= 'D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/'\n",
-    "    root_out_dir= 'D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/PyData/'\n",
+    "    root_in_dir= '../Datasets/psd_gp_vIHC_mat/'\n",
+    "    root_out_dir= '../Datasets/psd_gp_vIHC_mat/PyData/'\n",
     "    if not os.path.exists(root_out_dir):\n",
     "        os.makedirs(root_out_dir)\n",
     "    \n",
