--- a/Code/create_sgRNN_dataset_training_testing.ipynb
+++ b/Code/create_sgRNN_dataset_training_testing.ipynb
@@ -46,8 +46,8 @@
    "source": [
     "from numpy import int8\n",
     "\n",
-    "root_in_dir= 'D:/Dropbox/Python/MLmodels/Datasets/sgRNN_vIHC/vIHC_40ms/'\n",
-    "root_out_dir= 'D:/Dropbox/Python/MLmodels/Datasets/sgRNN_vIHC/PyData/'\n",
+    "root_in_dir= '../Datasets/sgRNN_vIHC/vIHC_40ms/'\n",
+    "root_out_dir= '../Datasets/sgRNN_vIHC/PyData/'\n",
     "clean_call_in_dir= root_in_dir + 'level65_dBspl_clean/'\n",
     "if not os.path.exists(root_out_dir):\n",
     "    os.makedirs(root_out_dir)\n",
