--- a/Code/archive/create_mps_dataset.ipynb
+++ b/Code/archive/create_mps_dataset.ipynb
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "root_matdata_dir = 'D:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/'\n",
+    "root_matdata_dir = '../Datasets/mps_gp_sgram/'\n",
     "clean_matdata_dir = root_matdata_dir + 'level65_dBspl_clean_ds/'\n",
     "out_ml_dir= root_matdata_dir + 'ds_ml_data/'\n",
     "\n",
@@ -426,7 +426,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('tf-gpu')",
+   "display_name": "Python 3.7.13 ('tf')",
    "language": "python",
    "name": "python3"
   },
@@ -440,12 +440,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9901b0122a0103a0e954f0712b860e20e1581f681d96d994631537742cd9f65d"
+    "hash": "c728683615649ae6024bdf2b54a6d3b0d13aadd4e771e3670de23ca9a3f30dd7"
    }
   }
  },
