--- a/Code/create_dsMPS_dataset_training_testing.ipynb
+++ b/Code/create_dsMPS_dataset_training_testing.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read unique files and create training and testing dataset "
+    "## Read unique files and create training dataset "
    ]
   },
   {
@@ -29,9 +29,8 @@
    "source": [
     "from numpy import int8\n",
     "\n",
-    "\n",
-    "root_in_dir= 'D:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/level65_dBspl_ds_int8/'\n",
-    "root_out_dir= 'D:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/'\n",
+    "root_in_dir= '../Datasets/mps_gp_sgram/level65_dBspl_ds_int8/'\n",
+    "root_out_dir= '../Datasets/mps_gp_sgram/PyData/'\n",
     "if not os.path.exists(root_out_dir):\n",
     "    os.makedirs(root_out_dir)\n",
     "\n",
@@ -116,45 +115,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create test dataset "
+    "## Create test dataset (for different SNRs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "snr_value=-20.0 with weight = 1.0\n",
-      "D:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr-20.h5\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr-20.h5\n",
-      "snr_value=-15.0 with weight = 1.0\n",
-      "D:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr-15.h5\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr-15.h5\n",
-      "snr_value=-10.0 with weight = 1.0\n",
-      "D:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr-10.h5\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr-10.h5\n",
-      "snr_value=-5.0 with weight = 1.0\n",
-      "D:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr-5.h5\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr-5.h5\n",
-      "snr_value=0.0 with weight = 1.0\n",
-      "D:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr0.h5\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr0.h5\n",
-      "snr_value=5.0 with weight = 1.0\n",
-      "D:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr5.h5\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr5.h5\n",
-      "snr_value=10.0 with weight = 1.0\n",
-      "D:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr10.h5\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr10.h5\n",
-      "snr_value=inf with weight = 1.0\n",
-      "D:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr-2147483648.h5\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/mps_gp_sgram/PyData/dsMPS_data_test_snr-2147483648.h5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for snr_value in all_snrs:\n",
     "    print(f\"snr_value={snr_value} with weight = {cur_weight}\")\n",
@@ -202,7 +170,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('tf-gpu')",
+   "display_name": "Python 3.7.13 ('tf')",
    "language": "python",
    "name": "python3"
   },
@@ -216,12 +184,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9901b0122a0103a0e954f0712b860e20e1581f681d96d994631537742cd9f65d"
+    "hash": "c728683615649ae6024bdf2b54a6d3b0d13aadd4e771e3670de23ca9a3f30dd7"
    }
   }
  },
