--- a/Code/run_dsMPS_CNN.ipynb
+++ b/Code/run_dsMPS_CNN.ipynb
@@ -817,7 +817,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('tf-gpu')",
+   "display_name": "Python 3.7.13 ('tf')",
    "language": "python",
    "name": "python3"
   },
@@ -831,12 +831,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9901b0122a0103a0e954f0712b860e20e1581f681d96d994631537742cd9f65d"
+    "hash": "c728683615649ae6024bdf2b54a6d3b0d13aadd4e771e3670de23ca9a3f30dd7"
    }
   }
  },
