--- a/Code/run_psd_MLP.ipynb
+++ b/Code/run_psd_MLP.ipynb
@@ -67,7 +67,7 @@
     "snr_training_weights= np.flip(len(all_snrs)-np.arange(len(all_snrs)))/len(all_snrs)\n",
     "print(snr_training_weights)\n",
     "\n",
-    "root_data_dir= 'D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/PyData/'\n",
+    "root_data_dir= '../Datasets/psd_gp_vIHC_mat/PyData/'\n",
     "\n",
     "\n",
     "# Load clean data \n",
@@ -921,7 +921,7 @@
    ],
    "source": [
     "def test_MLP_snr(MLPmodel, minmax_scaler, snr_value, test_inds_clean, test_fnames_clean):\n",
-    "    root_out_dir= 'D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/PyData/'\n",
+    "    root_out_dir= '../Datasets/psd_gp_vIHC_mat/PyData/'\n",
     "    if np.isinf(snr_value):\n",
     "        out_psd_data_file = root_out_dir + 'PSD_data_clean.h5'\n",
     "    else:\n",
@@ -1026,7 +1026,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('tf-gpu')",
+   "display_name": "Python 3.7.13 ('tf')",
    "language": "python",
    "name": "python3"
   },
@@ -1040,12 +1040,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9901b0122a0103a0e954f0712b860e20e1581f681d96d994631537742cd9f65d"
+    "hash": "c728683615649ae6024bdf2b54a6d3b0d13aadd4e771e3670de23ca9a3f30dd7"
    }
   }
  },
