Modified code to (1) create PSD datasets at different SNRs, with a flag whether to forcefully redo if dataset already exists, (2) using relative paths

--- a/Code/create_psd_full_dataset.ipynb
+++ b/Code/create_psd_full_dataset.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,35 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on: D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_clean/\n",
-      "--> all_files_nameonly: len lines= 1605, first line = psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
-      "--> psd_data_list: len lines= 1605, first line = D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_clean/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
-      "{4.0: 1605}\n",
-      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/PyData/PSD_data_clean.h5\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_clean/'"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "def save_snr_data(snr_value):\n",
+    "def save_snr_data(snr_value, forceReDo):\n",
     "    root_in_dir= '../Datasets/psd_gp_vIHC_mat/'\n",
     "    root_out_dir= '../Datasets/psd_gp_vIHC_mat/PyData/'\n",
     "    if not os.path.exists(root_out_dir):\n",
@@ -83,12 +59,16 @@
     "        root_matdata_dir = root_in_dir + 'level65_dBspl_clean/'\n",
     "        out_allfiles_txt_fname = root_out_dir + 'PSD_data_list_clean.txt'\n",
     "        out_psd_data_file = root_out_dir + 'PSD_data_clean.h5'\n",
+    "        pre_search_str = '_clean/'\n",
     "    else:\n",
     "        root_matdata_dir = root_in_dir + 'level65_dBspl_SNR' + snr_value.astype('int').astype('str') + '_white/'\n",
     "        out_allfiles_txt_fname = root_out_dir + 'PSD_data_list_SNR' + snr_value.astype('int').astype('str') + '.txt'\n",
     "        out_psd_data_file = root_out_dir + 'PSD_data_SNR' + snr_value.astype('int').astype('str') + '.h5'\n",
+    "        pre_search_str = '_white/'\n",
     "\n",
-    "    if (not os.path.exists(out_psd_data_file)):\n",
+    "    post_search_str = '/psd_'\n",
+    "\n",
+    "    if (not os.path.exists(out_psd_data_file)) or forceReDo:\n",
     "        if os.path.exists(root_matdata_dir):\n",
     "            print(f\"Working on: {root_matdata_dir}\")\n",
     "        else:\n",
@@ -115,9 +95,6 @@
     "                f.write(f\"{line}\\n\")\n",
     "\n",
     "        data_psd_x = []\n",
-    "        pre_search_str = 'clean/'\n",
-    "        post_search_str = '/psd_'\n",
-    "\n",
     "        for fName in psd_data_list:\n",
     "            data = mh.loadmat(fName)\n",
     "            data_psd_x.append(data[\"psd_data\"][\"psd\"]) \n",
@@ -133,17 +110,24 @@
     "\n",
     "        data_psd_x = np.array(data_psd_x)\n",
     "        data_label_y = np.array(data_label_y).astype(int)\n",
-    "        print(f\"data_psd_x={type(data_psd_x)}&{len(data_psd_x)},data_label_y={type(data_label_y)}&{data_label_y.shape},\")\n",
+    "        psd_data_list = np.array(psd_data_list)\n",
+    "        print(f\"data_psd_x={type(data_psd_x)}&{len(data_psd_x)},data_label_y={type(data_label_y)}&{data_label_y.shape},\\\n",
+    "            psd_data_list={type(psd_data_list)}&{psd_data_list.shape}\")\n",
     "\n",
-    "        print(\"Saving file\" + out_psd_data_file)\n",
     "        hf = h5py.File(out_psd_data_file, \"w\")\n",
-    "        hf.create_dataset('data_psd_x', data=data_psd_x)\n",
-    "        hf.create_dataset('data_label_y', data=data_label_y)\n",
-    "        hf.create_dataset('data_filename', data=psd_data_list)\n",
-    "        hf.close()\n",
+    "        try:\n",
+    "            hf.create_dataset('data_psd_x', data=data_psd_x)\n",
+    "            hf.create_dataset('data_label_y', data=data_label_y)\n",
+    "            # hf.create_dataset('data_filename', data=psd_data_list)\n",
+    "            hf.close()\n",
+    "            print(\"Saved file\" + out_psd_data_file)\n",
+    "\n",
+    "        except:\n",
+    "            print(f\"Error trying save {out_psd_data_file}\")\n",
+    "            hf.close()\n",
+    "\n",
     "    else: \n",
-    "        print(\"File (\" + out_psd_data_file + \") already exists\")\n",
-    "\n"
+    "        print(\"File (\" + out_psd_data_file + \") already exists\")"
    ]
   },
   {
@@ -155,69 +139,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working on: D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-20_white/\n",
+      "Working on: ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-20_white/\n",
       "--> all_files_nameonly: len lines= 1605, first line = psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
-      "--> psd_data_list: len lines= 1605, first line = D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-20_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
+      "--> psd_data_list: len lines= 1605, first line = ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-20_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
       "{4.0: 1605}\n",
-      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR-20.h5\n",
-      "Working on: D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-15_white/\n",
+      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),            psd_data_list=<class 'numpy.ndarray'>&(1605,)\n",
+      "Saving file../Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR-20.h5\n",
+      "Working on: ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-15_white/\n",
       "--> all_files_nameonly: len lines= 1605, first line = psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
-      "--> psd_data_list: len lines= 1605, first line = D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-15_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
+      "--> psd_data_list: len lines= 1605, first line = ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-15_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
       "{4.0: 1605}\n",
-      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR-15.h5\n",
-      "Working on: D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-10_white/\n",
+      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),            psd_data_list=<class 'numpy.ndarray'>&(1605,)\n",
+      "Saving file../Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR-15.h5\n",
+      "Working on: ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-10_white/\n",
       "--> all_files_nameonly: len lines= 1605, first line = psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
-      "--> psd_data_list: len lines= 1605, first line = D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-10_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
+      "--> psd_data_list: len lines= 1605, first line = ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-10_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
       "{4.0: 1605}\n",
-      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR-10.h5\n",
-      "Working on: D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-5_white/\n",
+      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),            psd_data_list=<class 'numpy.ndarray'>&(1605,)\n",
+      "Saving file../Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR-10.h5\n",
+      "Working on: ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-5_white/\n",
       "--> all_files_nameonly: len lines= 1605, first line = psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
-      "--> psd_data_list: len lines= 1605, first line = D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-5_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
+      "--> psd_data_list: len lines= 1605, first line = ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR-5_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
       "{4.0: 1605}\n",
-      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR-5.h5\n",
-      "Working on: D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR0_white/\n",
+      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),            psd_data_list=<class 'numpy.ndarray'>&(1605,)\n",
+      "Saving file../Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR-5.h5\n",
+      "Working on: ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR0_white/\n",
       "--> all_files_nameonly: len lines= 1605, first line = psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
-      "--> psd_data_list: len lines= 1605, first line = D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR0_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
+      "--> psd_data_list: len lines= 1605, first line = ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR0_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
       "{4.0: 1605}\n",
-      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR0.h5\n",
-      "Working on: D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR5_white/\n",
+      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),            psd_data_list=<class 'numpy.ndarray'>&(1605,)\n",
+      "Saving file../Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR0.h5\n",
+      "Working on: ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR5_white/\n",
       "--> all_files_nameonly: len lines= 1605, first line = psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
-      "--> psd_data_list: len lines= 1605, first line = D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR5_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
+      "--> psd_data_list: len lines= 1605, first line = ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR5_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
       "{4.0: 1605}\n",
-      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR5.h5\n",
-      "Working on: D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR10_white/\n",
+      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),            psd_data_list=<class 'numpy.ndarray'>&(1605,)\n",
+      "Saving file../Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR5.h5\n",
+      "Working on: ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR10_white/\n",
       "--> all_files_nameonly: len lines= 1605, first line = psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
-      "--> psd_data_list: len lines= 1605, first line = D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR10_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
+      "--> psd_data_list: len lines= 1605, first line = ../Datasets/psd_gp_vIHC_mat/level65_dBspl_SNR10_white/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
       "{4.0: 1605}\n",
-      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),\n",
-      "Saving fileD:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR10.h5\n",
-      "Working on: D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_clean/\n",
+      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),            psd_data_list=<class 'numpy.ndarray'>&(1605,)\n",
+      "Saving file../Datasets/psd_gp_vIHC_mat/PyData/PSD_data_SNR10.h5\n",
+      "Working on: ../Datasets/psd_gp_vIHC_mat/level65_dBspl_clean/\n",
       "--> all_files_nameonly: len lines= 1605, first line = psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
-      "--> psd_data_list: len lines= 1605, first line = D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/level65_dBspl_clean/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
+      "--> psd_data_list: len lines= 1605, first line = ../Datasets/psd_gp_vIHC_mat/level65_dBspl_clean/Chut/psd_Chut_2_Feb_07_2022_51861688_ms_101198_101787.mat\n",
       "{4.0: 1605}\n",
-      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),\n",
-      "File (D:/Dropbox/Python/MLmodels/Datasets/psd_gp_vIHC_mat/PyData/PSD_data_clean.h5) already exists\n"
+      "data_psd_x=<class 'numpy.ndarray'>&1605,data_label_y=<class 'numpy.ndarray'>&(1605, 1),            psd_data_list=<class 'numpy.ndarray'>&(1605,)\n",
+      "Saving file../Datasets/psd_gp_vIHC_mat/PyData/PSD_data_clean.h5\n"
      ]
     }
    ],
    "source": [
     "all_snrs= np.arange(-20.0, 11, 5)\n",
     "all_snrs= np.append(all_snrs, np.inf)\n",
+    "forceReDo = True\n",
     "for snr_val in all_snrs:\n",
-    "    save_snr_data(snr_val)"
+    "    save_snr_data(snr_val,forceReDo)"
    ]
   }
  ],
